create database-manage (cr)

--- a/Areas/Product/Views/Product/ViewProduct.cshtml
+++ b/Areas/Product/Views/Product/ViewProduct.cshtml
@@ -1,5 +1,9 @@
 @model ProductModel
 
+
+<small>@Url.Action("ViewProduct","Product",new {
+    area = "Product"})</small>
+
 <h3>Sản phẩm #@Model.Id</h3>
 <h4>Tên sản phẩm: @Model.Name</h4>
 <p>Giá: @Model.Price</p>
